# musabi

./: .gitignore  CLAUDE.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  Pipfile  README.md  aws-setup.json  deploy.yml  setup.cfg
.github/workflows/: CI.yml  claude-code-review.yml  lambda-cd.yml  lambda-ci.yml  tests.yml
iac-v1/: cdk.json
iac-v2/: Makefile  cdk.json  package-lock.json  package.json
iac-v2/lib/: ecr-stack.ts  iac-v2-stack.ts  musabi-stack.ts  sfn-stack.ts
iac-v2/test/: iac-v2.test.ts  musabi.test.ts
iac/musabi_iac/: musabi_stack.py
iac/musabi_iac/lambda_handler/: generate_dish.py
lambda/: CLAUDE.md  Makefile  deploy.sh  pyproject.toml
lambda/docker/: Dockerfile
lambda/src/edit_img/: handler.py
lambda/src/gen_img/: client.py  handler.py
lambda/src/gen_text/: handler.py
lambda/src/pub_img/: client.py  handler.py  mod.py
lambda/src/select_img/: handler.py
lambda/src/shared/: __init__.py  api_client.py  config.py  error_handler.py  logger.py  logging.py  s3.py  type.py
lambda/tests/: conftest.py  test_edit_img_handler.py  test_gen_img_handler.py  test_gen_text_handler.py  test_pub_img_client.py  test_pub_img_handler.py  test_pub_img_mod.py  test_shared_config.py
ml-v2/: .gitignore  Makefile
ml-v2/musabi_ml/: image.py  main.py
ml-v2/tests/: conftest.py
ml-v2/tests/unit/util/: test_image_util.py
musabi-bot/: Dockerfile  pyproject.toml
musabi-bot/musabi_bot/: instagram.py  main.py
musabi-bot/musabi_bot/gan/: trained_model.py
musabi-bot/musabi_bot/util/: image_util.py
musabi-bot/src/gan/: dcgan.py
musabi-bot/tests/: conftest.py
musabi-bot/tests/unit/util/: test_image_util.py
musabi-iac/: Makefile  pyproject.toml
musabi-iac/musabi_iac/: app.py  musabi_stack.py
musabi-iac/musabi_iac/lambda_handler/: generate_dish.py  publish_image.py  requirements.txt
musabi-iac/tests/: test_musabi_cdk.py
musabi-ml-v2/: Dockerfile  Makefile  pyproject.toml
musabi-ml-v2/musabi_ml/: image.py  instagram.py  main.py
musabi-util/: .env.sample  Makefile  pyproject.toml
musabi-util/musabi_util/: audio.py  image.py  movie.py
musabi-util/musabi_util/audio/: datasets.py
musabi/src/data/: image_storage.py
musabi/src/job/: crawler_job.py
musabi/src/util/: image_util.py
musabi/tests/unit/gan/: test_dcgan.py
src/: trainer.py
src/bot/: insta_bot.py
src/data/: crawler_job.py  image_crawler.py
src/gan/: dcgan.py  loader.py  trained_model.py  trainer.py
src/job/: insta_job.py  trainer_job.py
src/model/: dcgan.py
src/util/: image_util.py
tests/: conftest.py  util.py
tests/integration/: test_dcgan.py
tests/unit/: test_dcgan.py
tests/unit/gan/: test_dcgan.py  test_trainer.py
tests/unit/gan/model/: test_dcgan.py
tests/unit/util/: test_image_util.py
util/: .gitignore
util/musabi_util/audio/: scraper.py
