[tool.poetry]
name = "musabi-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "musabi_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
diffusers = "^0.12.1"
transformers = "^4.26.0"
ftfy = "^6.1.1"
accelerate = "^0.15.0"
torch = "~1.12.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.12.0"
mypy = "^0.991"
types-requests = "^2.28.11.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# エラー時のメッセージを詳細表示
show_error_context = true
# エラー発生箇所の行数/列数を表示
show_column_numbers = true
# import 先のチェックを行わない (デフォルトだとサードパーティーライブラリまでチェックする)
ignore_missing_imports = true
# 関数定義の引数/戻り値に型アノテーション必須
disallow_untyped_defs = true
# デフォルト引数に None を取る場合型アノテーションに Optional 必須
no_implicit_optional = true
# 戻り値が Any 型ではない関数の戻り値の型アノテーションが Any のとき警告
warn_return_any = true
# mypy エラーに該当しない箇所に `# type: ignore` コメントが付与されていたら警告
# ※ `# type: ignore` が付与されている箇所は mypy のエラーを無視出来る
warn_unused_ignores = true
# 冗長なキャストに警告
warn_redundant_casts = true
# チェック対象外ディレクトリ
exclude = []
