[tool.poetry]
name = "musabi-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "musabi_ml"}]

[tool.poetry.dependencies]
python = "3.11.4"
diffusers = "^0.12.1"
# https://github.com/pytorch/pytorch/issues/100974
torch = ">=2.0.0, !=2.0.1"
pillow = "^10.0.1"
transformers = "^4.33.3"
ftfy = "^6.1.1"
accelerate = "^0.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
ruff = "^0.0.291"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = []

[tool.ruff]
target-version = "py311"
select = ["ALL"]
ignore = [
  "D",
  "TD",
  "FIX",
]
fixable = ["ALL"]
unfixable = []
line-length = 88